Se hace commit con el estado actual de la rama. Aún inestable, la aplicación no arranca por un problema de configuración en la seguridad de spring (v 6.0.0)