@@ -7,9 +7,9 @@ import java.text.DecimalFormatSymbols;
 import java.text.ParseException;
 import java.util.List;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
 
 import org.jlobato.gpro.dao.mybatis.facade.FachadaGPRCup;
 import org.jlobato.gpro.dao.mybatis.facade.FachadaManager;
@@ -511,7 +511,7 @@ public class GprcupController {
         
         Season season = null;
         if (idSeason != null) {
-        	season = fachadaSeason.getSeason(new Integer(idSeason));
+        	season = fachadaSeason.getSeason(Integer.valueOf(idSeason));
         } else {
         	season = fachadaSeason.getCurrentSeason();
         }
